re-introduced reset_ml_on_startup on scripts