@@ -1,5 +1,6 @@
 #!/bin/sh
 
-#export JAVA_OPTS=" -Dlogback.configurationFile=logback.xml -Xms256m -Xmx1g -XX:MaxPermSize=256m"
 export BROOKLYN_CLASSPATH=$(pwd)/target/classes
 brooklyn launch --app io.cloudsoft.marklogic.MarkLogicApp --location named:marklogic-us-east-1
+#brooklyn launch --app io.cloudsoft.marklogic.MarkLogicApp --location cloudservers-uk
+#brooklyn launch --app io.cloudsoft.marklogic.MarkLogicApp --location named:marklogic-eu-west-1
